Move feed abd posts into the app package
